Fixed layout issue

--- a/style.css
+++ b/style.css
@@ -16,7 +16,7 @@
 
 body {
   font-family: system-ui, sans-serif;
-  width: 400px;
+  width: 450px;
   margin: 0;
   padding: 0.5rem;
   text-align: center;
